dist/1.0/bin/sample/retrieveUnpackaged/objects/Ticket__c.object
<CustomObject>
    <description>Tickets from external TT System</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account related to the Ticket</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseLink__c</fullName>
        <description>Opens existing Case  in TT System</description>
        <formula>HYPERLINK(&quot;https://occe.gtsce.com/helpdesk/edit_tt.php?read_only=true&amp;ticket_id=&quot; &amp;  Name , &quot;Go to Case&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opens existing Case  in TT System</inlineHelpText>
        <label>Case Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>Date when Ticket was Closed</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Date when Ticket was created</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <description>Name of the Department</description>
        <label>Department Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureDuration__c</fullName>
        <description>Duration of Failure</description>
        <label>Failure Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Service Related to the Ticket</description>
        <label>Service</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolverName__c</fullName>
        <description>Person, who solves the Ticket</description>
        <label>Solver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the Ticket</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TicketStatus__c</fullName>
        <description>Status of the Ticket</description>
        <label>Ticket Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TicketType__c</fullName>
        <description>Type of the Ticket</description>
        <label>Ticket Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Service__c</columns>
        <columns>TicketType__c</columns>
        <columns>Subject__c</columns>
        <columns>TicketStatus__c</columns>
        <columns>DepartmentName__c</columns>
        <columns>SolverName__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>ClosedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticket ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closed_Date_Required</fullName>
        <active>true</active>
        <description>Closed Date is Required when Status set to Closed</description>
        <errorConditionFormula>ISPICKVAL( TicketStatus__c , &apos;Close&apos;)  &amp;&amp;  ISNULL( ClosedDate__c )</errorConditionFormula>
        <errorDisplayField>ClosedDate__c</errorDisplayField>
        <errorMessage>Closed Date is Required for Closed Status</errorMessage>
    </validationRules>
</CustomObject>